# auto-time-tracking

./: .env.example  .gitignore  CLASSIFICATION_RULES.md  README.md  SETUP-GUIDE.md  pyproject.toml  setup.sh
.claude/: settings.json
cache/: phases_1000398.json  phases_1000405.json  phases_1000449.json  phases_1000461.json  phases_1000862.json  phases_1100677.json  phases_1116583.json  phases_1119785.json  phases_994649.json  projects.json  rocketlane_projects_phases.json
src/time_tracking/: auto_update.py  classifier.py  classify_events.py  config.py  correction_interpreter.py  correction_memory.py  display.py  gcal_auth.py  gcal_client.py  models.py  overlap.py  post_time_entries.py  rocketlane_client.py  slack_listener.py  slack_notifier.py  train.py  users.py
